--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "nodemailer": "^6.10.1",
     "openai": "^4.77.4",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
     "react-day-picker": "^9.5.0",
     "react-dom": "^18.3.1",
@@ -84,6 +85,7 @@
     "@types/node": "^20.17.12",
     "@types/nodemailer": "^6.4.17",
     "@types/pdf-parse": "^1.1.4",
+    "@types/pdfjs-dist": "^2.10.378",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18",
     "eslint": "^8.57.1",
